--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@sendgrid/mail": "^6.3.1",
     "chalk": "^2.4.2",
     "dotenv": "^7.0.0",
-    "handlebars": "^4.1.2",
-    "mjml": "^4.4.0-beta.1"
+    "handlebars": "^4.5.3",
+    "mjml": "^4.5.1"
   }
 }
