feat: nuevas variables de ambiente

--- a/.env-default
+++ b/.env-default
@@ -1,2 +1,5 @@
 SENDGRID_API_KEY=XXX
 RECIPENT_EMAIL=navila@alemana.cl
+FROM_EMAIL=no@tengo.cl
+FROM_EMAIL_NAME=My Super Mail App
+FROM_EMAIL_SUBJECT=Example contact mail
