--- a/package.json
+++ b/package.json
@@ -1,19 +1,27 @@
 {
   "name": "mjml-sendgrid-tutorial",
   "version": "1.0.0",
-  "description": "",
+  "description": "An example of putting together MJML, Handlebars & Twillio Sendgrid for building responsive mails",
   "main": "example.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nicoavila/mjml-sendgrid-tutorial"
   },
-  "keywords": [],
+  "scripts": {
+    "start": "node example.js"
+  },
+  "keywords": [
+    "mjml",
+    "handlebars",
+    "sendgrid"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^6.3.1",
     "chalk": "^2.4.2",
     "dotenv": "^7.0.0",
-    "handlebars": "^4.5.3",
+    "handlebars": "^4.7.6",
     "mjml": "^4.5.1"
   }
 }
